<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Take me home!</string>
    <string name="title_section1">Search</string>
    <string name="title_section2">Guide me now!</string>
    <string name="title_section3">Map</string>
    <string name="title_section4">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Go!</string>
    <string name="action_settings">Settings</string>

    <!-- Search fragment -->
    <string name="Question">Where do you want to go?</string>
    <string name="Question_hint">Type a Location or Postal Code</string>
    <string name="Button_search">Search!</string>
    <string name="Button_go_home">Just take me home!!</string>
    <string name="DestLat">Destination Latitude</string>
    <string name="DestLong">Destination Longitude</string>

    <!-- Settings fragment -->
    <string name="Question2">I\'m at home!</string>
    <string name="Button_home">Set home</string>
    <string name="HomeLat">Home Latitude</string>
    <string name="HomeLong">Home Longitude</string>
    <string name="Button_fake_home">Fake home</string>
    
     <!-- Settings guide -->
    <string name="ActLat">Actual Latitude</string>
    <string name="ActLong">Actual Longitude</string>
    <string name="X">X</string>
    <string name="Y">Y</string>
    <string name="Z">Z</string>
    
    <!--  Fake autocomplete -->
     <string-array name="list_of_countries">
      <item >Sant Cugat del Vallès</item>
      <item >Sabadell</item>
      <item >Sant Vicenç dels Horts</item>
      <item >Sant Sadurní d\'Anoia</item>
      <item >Sant Feliu de Codines</item>
      <item >Sant Adrià de Besós</item>
      <item >Barcelona</item>
      <item >Badalona</item>
      <item >Mongat</item> </string-array>
      

</resources>