<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="take.me.home.MainActivity$PlaceholderFragment" >

    <!-- Actual Position -->

    <TextView
        android:id="@+id/ActLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/ActLat" />

    <TextView
        android:id="@+id/actlatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/ActLatitude" />

    <TextView
        android:id="@+id/ActLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/ActLong" />

    <TextView
        android:id="@+id/actlongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/ActLongitude" />

    <!-- Destination Position -->

    <TextView
        android:id="@+id/DestLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/actlatitude"
        android:layout_marginTop="42dp"
        android:text="@string/DestLat" />

    <TextView
        android:id="@+id/destlatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/DestLatitude" />

    <TextView
        android:id="@+id/DestLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/actlongitude"
        android:layout_marginTop="42dp"
        android:text="@string/DestLong" />

    <TextView
        android:id="@+id/destlongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/DestLongitude" />



</RelativeLayout>